[gd_scene load_steps=4 format=3 uid="uid://j34cxjg62fje"]

[ext_resource type="Script" uid="uid://gbjrp1ae8qwk" path="res://core/UI/scripts/highscore.gd" id="1_qu46c"]
[ext_resource type="Theme" uid="uid://bvudsuymnp2kj" path="res://core/resources/theme/asteroid_theme.tres" id="1_smcit"]
[ext_resource type="PackedScene" uid="uid://dmuk0fyhkw4xd" path="res://_reusable/ui_scenes/button_with_sound.tscn" id="2_smcit"]

[node name="Highscore" type="Control" groups=["persistent"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_smcit")
script = ExtResource("1_qu46c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HighscoreContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Highscore1" type="HBoxContainer" parent="MarginContainer/HighscoreContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Name_1" type="Label" parent="MarginContainer/HighscoreContainer/Highscore1"]
layout_mode = 2
size_flags_horizontal = 4
text = "Deborah"

[node name="Nr_1" type="Label" parent="MarginContainer/HighscoreContainer/Highscore1"]
layout_mode = 2
size_flags_horizontal = 4
text = "1350"

[node name="Highscore2" type="HBoxContainer" parent="MarginContainer/HighscoreContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Name_2" type="Label" parent="MarginContainer/HighscoreContainer/Highscore2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Oli"

[node name="Nr_2" type="Label" parent="MarginContainer/HighscoreContainer/Highscore2"]
layout_mode = 2
size_flags_horizontal = 4
text = "5"

[node name="Highscore3" type="HBoxContainer" parent="MarginContainer/HighscoreContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Name_3" type="Label" parent="MarginContainer/HighscoreContainer/Highscore3"]
layout_mode = 2
size_flags_horizontal = 4
text = "Simon"

[node name="Nr_3" type="Label" parent="MarginContainer/HighscoreContainer/Highscore3"]
layout_mode = 2
size_flags_horizontal = 4
text = "120"

[node name="Highscore4" type="HBoxContainer" parent="MarginContainer/HighscoreContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Name_4" type="Label" parent="MarginContainer/HighscoreContainer/Highscore4"]
layout_mode = 2
size_flags_horizontal = 4
text = "Lisa"

[node name="Nr_4" type="Label" parent="MarginContainer/HighscoreContainer/Highscore4"]
layout_mode = 2
size_flags_horizontal = 4
text = "340"

[node name="Highscore5" type="HBoxContainer" parent="MarginContainer/HighscoreContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Name_5" type="Label" parent="MarginContainer/HighscoreContainer/Highscore5"]
layout_mode = 2
size_flags_horizontal = 4
text = "Bert"

[node name="Nr_5" type="Label" parent="MarginContainer/HighscoreContainer/Highscore5"]
layout_mode = 2
size_flags_horizontal = 4
text = "850"

[node name="button_with_sound" parent="MarginContainer" instance=ExtResource("2_smcit")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Back To Menu"
flat = true

[connection signal="button_clicked" from="MarginContainer/button_with_sound" to="." method="_on_button_with_sound_button_clicked"]
